Add some snippets.

--- a/numpy_snippets.ipynb
+++ b/numpy_snippets.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 794,
+   "execution_count": 397,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 795,
+   "execution_count": 398,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +53,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 795,
+     "execution_count": 398,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 796,
+   "execution_count": 399,
    "metadata": {
     "collapsed": false
    },
@@ -76,7 +76,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 796,
+     "execution_count": 399,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 797,
+   "execution_count": 400,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +98,7 @@
        "array([ 0.,  0.,  0.])"
       ]
      },
-     "execution_count": 797,
+     "execution_count": 400,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 798,
+   "execution_count": 401,
    "metadata": {
     "collapsed": false
    },
@@ -122,7 +122,7 @@
        "       [ 0.,  0.,  0.,  0.]])"
       ]
      },
-     "execution_count": 798,
+     "execution_count": 401,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 799,
+   "execution_count": 402,
    "metadata": {
     "collapsed": false
    },
@@ -144,7 +144,7 @@
        "array([ 1.,  1.,  1.])"
       ]
      },
-     "execution_count": 799,
+     "execution_count": 402,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 800,
+   "execution_count": 403,
    "metadata": {
     "collapsed": false
    },
@@ -168,7 +168,7 @@
        "       [ 1.,  1.,  1.,  1.]])"
       ]
      },
-     "execution_count": 800,
+     "execution_count": 403,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 801,
+   "execution_count": 404,
    "metadata": {
     "collapsed": false
    },
@@ -192,7 +192,7 @@
        "       [ 0.,  0.,  1.]])"
       ]
      },
-     "execution_count": 801,
+     "execution_count": 404,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 802,
+   "execution_count": 405,
    "metadata": {
     "collapsed": false
    },
@@ -211,10 +211,10 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.49236199,  0.56044653,  0.21394199])"
+       "array([ 0.77283777,  0.6127424 ,  0.23367867])"
       ]
      },
-     "execution_count": 802,
+     "execution_count": 405,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 803,
+   "execution_count": 406,
    "metadata": {
     "collapsed": false
    },
@@ -233,12 +233,12 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.26495936,  0.22345876,  0.22270719,  0.83656217],\n",
-       "       [ 0.24332518,  0.47431045,  0.91139059,  0.55369934],\n",
-       "       [ 0.00217221,  0.80595813,  0.89307862,  0.77351091]])"
+       "array([[ 0.59592917,  0.78873368,  0.03985085,  0.09772944],\n",
+       "       [ 0.26795206,  0.74509993,  0.42270229,  0.96082389],\n",
+       "       [ 0.20604007,  0.30761428,  0.57688855,  0.27930349]])"
       ]
      },
-     "execution_count": 803,
+     "execution_count": 406,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 804,
+   "execution_count": 407,
    "metadata": {
     "collapsed": false
    },
@@ -260,7 +260,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 804,
+     "execution_count": 407,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 805,
+   "execution_count": 408,
    "metadata": {
     "collapsed": false
    },
@@ -282,7 +282,7 @@
        "array([10, 11, 12, 13, 14, 15, 16, 17, 18, 19])"
       ]
      },
-     "execution_count": 805,
+     "execution_count": 408,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 806,
+   "execution_count": 409,
    "metadata": {
     "collapsed": false
    },
@@ -304,7 +304,7 @@
        "array([10, 12, 14, 16, 18])"
       ]
      },
-     "execution_count": 806,
+     "execution_count": 409,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 807,
+   "execution_count": 410,
    "metadata": {
     "collapsed": false
    },
@@ -326,7 +326,7 @@
        "array([ 0. ,  0.2,  0.4,  0.6,  0.8,  1. ,  1.2,  1.4,  1.6,  1.8,  2. ])"
       ]
      },
-     "execution_count": 807,
+     "execution_count": 410,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 808,
+   "execution_count": 411,
    "metadata": {
     "collapsed": false
    },
@@ -352,7 +352,7 @@
        "        [6, 6, 6]])]"
       ]
      },
-     "execution_count": 808,
+     "execution_count": 411,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 809,
+   "execution_count": 412,
    "metadata": {
     "collapsed": true
    },
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 810,
+   "execution_count": 413,
    "metadata": {
     "collapsed": false
    },
@@ -392,7 +392,7 @@
        "2"
       ]
      },
-     "execution_count": 810,
+     "execution_count": 413,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 811,
+   "execution_count": 414,
    "metadata": {
     "collapsed": false
    },
@@ -414,7 +414,7 @@
        "6"
       ]
      },
-     "execution_count": 811,
+     "execution_count": 414,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 812,
+   "execution_count": 415,
    "metadata": {
     "collapsed": false
    },
@@ -436,7 +436,7 @@
        "(2, 3)"
       ]
      },
-     "execution_count": 812,
+     "execution_count": 415,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 813,
+   "execution_count": 416,
    "metadata": {
     "collapsed": true
    },
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 814,
+   "execution_count": 417,
    "metadata": {
     "collapsed": false
    },
@@ -476,7 +476,7 @@
        "array([0, 1, 2, 3, 4, 5])"
       ]
      },
-     "execution_count": 814,
+     "execution_count": 417,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 815,
+   "execution_count": 418,
    "metadata": {
     "collapsed": false
    },
@@ -498,7 +498,7 @@
        "0"
       ]
      },
-     "execution_count": 815,
+     "execution_count": 418,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 816,
+   "execution_count": 419,
    "metadata": {
     "collapsed": false
    },
@@ -520,7 +520,7 @@
        "5"
       ]
      },
-     "execution_count": 816,
+     "execution_count": 419,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 817,
+   "execution_count": 420,
    "metadata": {
     "collapsed": false
    },
@@ -542,7 +542,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 817,
+     "execution_count": 420,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 818,
+   "execution_count": 421,
    "metadata": {
     "collapsed": false
    },
@@ -566,7 +566,7 @@
        "       [100, 200, 300, 400, 500, 600]])"
       ]
      },
-     "execution_count": 818,
+     "execution_count": 421,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 819,
+   "execution_count": 422,
    "metadata": {
     "collapsed": false
    },
@@ -589,7 +589,7 @@
        "2"
       ]
      },
-     "execution_count": 819,
+     "execution_count": 422,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 820,
+   "execution_count": 423,
    "metadata": {
     "collapsed": false
    },
@@ -611,7 +611,7 @@
        "array([10, 20, 30, 40, 50, 60])"
       ]
      },
-     "execution_count": 820,
+     "execution_count": 423,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 825,
+   "execution_count": 424,
    "metadata": {
     "collapsed": false
    },
@@ -633,7 +633,7 @@
        "array([10, 30, 50])"
       ]
      },
-     "execution_count": 825,
+     "execution_count": 424,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 821,
+   "execution_count": 425,
    "metadata": {
     "collapsed": false
    },
@@ -655,7 +655,7 @@
        "array([  2,  20, 200])"
       ]
      },
-     "execution_count": 821,
+     "execution_count": 425,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 822,
+   "execution_count": 426,
    "metadata": {
     "collapsed": false
    },
@@ -678,7 +678,7 @@
        "       [30, 40]])"
       ]
      },
-     "execution_count": 822,
+     "execution_count": 426,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 823,
+   "execution_count": 427,
    "metadata": {
     "collapsed": false
    },
@@ -701,7 +701,7 @@
        "       [200, 300, 400, 500, 600]])"
       ]
      },
-     "execution_count": 823,
+     "execution_count": 427,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 824,
+   "execution_count": 428,
    "metadata": {
     "collapsed": false
    },
@@ -724,13 +724,162 @@
        "       [10, 20, 30, 40, 50]])"
       ]
      },
-     "execution_count": 824,
+     "execution_count": 428,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a[:-1, :-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 429,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1,   2,   3,   4,   5,   6],\n",
+       "       [ 10,  20,  30,  40,  50,  60],\n",
+       "       [100, 200, 300, 400, 500, 600]])"
+      ]
+     },
+     "execution_count": 429,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([[1, 2, 3, 4, 5, 6],[10, 20, 30, 40, 50, 60],[100, 200, 300, 400, 500, 600]])\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Boolean matrix whose i,jth element is (a_ij > 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 430,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False, False, False,  True],\n",
+       "       [ True,  True,  True,  True,  True,  True],\n",
+       "       [ True,  True,  True,  True,  True,  True]], dtype=bool)"
+      ]
+     },
+     "execution_count": 430,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(a>5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find the indices where (a > 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 431,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2]),\n",
+       " array([5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5]))"
+      ]
+     },
+     "execution_count": 431,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.nonzero(a>5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### a with elements greater than 5 zeroed out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 432,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3, 4, 5, 0],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 432,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a * (a<=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 433,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3, 4, 5, 0],\n",
+       "       [0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 433,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[a>5] = 0\n",
+    "a"
    ]
   },
   {
@@ -744,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 691,
+   "execution_count": 434,
    "metadata": {
     "collapsed": false
    },
@@ -756,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 692,
+   "execution_count": 435,
    "metadata": {
     "collapsed": false
    },
@@ -768,7 +917,7 @@
        "       [ 0.,  0.,  0.]])"
       ]
      },
-     "execution_count": 692,
+     "execution_count": 435,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 693,
+   "execution_count": 436,
    "metadata": {
     "collapsed": false
    },
@@ -791,7 +940,7 @@
        "       [ 1.,  1.,  1.]])"
       ]
      },
-     "execution_count": 693,
+     "execution_count": 436,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 694,
+   "execution_count": 437,
    "metadata": {
     "collapsed": false
    },
@@ -816,7 +965,7 @@
        "       [ 1.,  1.,  1.]])"
       ]
      },
-     "execution_count": 694,
+     "execution_count": 437,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 695,
+   "execution_count": 438,
    "metadata": {
     "collapsed": false
    },
@@ -842,7 +991,7 @@
        "        [ 1.,  1.,  1.]]])"
       ]
      },
-     "execution_count": 695,
+     "execution_count": 438,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 696,
+   "execution_count": 439,
    "metadata": {
     "collapsed": false
    },
@@ -865,7 +1014,7 @@
        "       [ 0.,  0.,  0.,  1.,  1.,  1.]])"
       ]
      },
-     "execution_count": 696,
+     "execution_count": 439,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 697,
+   "execution_count": 440,
    "metadata": {
     "collapsed": false
    },
@@ -891,7 +1040,7 @@
        "        [ 1.,  1.,  1.]]])"
       ]
      },
-     "execution_count": 697,
+     "execution_count": 440,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 698,
+   "execution_count": 441,
    "metadata": {
     "collapsed": false
    },
@@ -919,7 +1068,7 @@
        "        [ 0.,  1.]]])"
       ]
      },
-     "execution_count": 698,
+     "execution_count": 441,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 699,
+   "execution_count": 442,
    "metadata": {
     "collapsed": false
    },
@@ -944,7 +1093,7 @@
        "       [4, 5, 6, 4, 5, 6, 4, 5, 6]])"
       ]
      },
-     "execution_count": 699,
+     "execution_count": 442,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 700,
+   "execution_count": 443,
    "metadata": {
     "collapsed": true
    },
@@ -974,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 701,
+   "execution_count": 444,
    "metadata": {
     "collapsed": false
    },
@@ -987,7 +1136,7 @@
        "       [3, 6]])"
       ]
      },
-     "execution_count": 701,
+     "execution_count": 444,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 702,
+   "execution_count": 445,
    "metadata": {
     "collapsed": false
    },
@@ -1009,7 +1158,7 @@
        "array([1, 2, 3, 4, 5, 6])"
       ]
      },
-     "execution_count": 702,
+     "execution_count": 445,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 703,
+   "execution_count": 446,
    "metadata": {
     "collapsed": true
    },
@@ -1039,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 704,
+   "execution_count": 447,
    "metadata": {
     "collapsed": false
    },
@@ -1050,7 +1199,7 @@
        "140"
       ]
      },
-     "execution_count": 704,
+     "execution_count": 447,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 705,
+   "execution_count": 448,
    "metadata": {
     "collapsed": false
    },
@@ -1072,7 +1221,7 @@
        "140"
       ]
      },
-     "execution_count": 705,
+     "execution_count": 448,
      "metadata": {},
      "output_type": "execute_result"
     }
