--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -2,17 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Numpy snippets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Documentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
    "source": [
-    "# Numpy snippets\n",
-    "\n",
-    "## Documentation\n",
-    "\n",
-    "https://docs.scipy.org/doc/numpy-dev/user/numpy-for-matlab-users.html"
+    "This notebook is inspired by the following page: https://docs.scipy.org/doc/numpy-dev/user/numpy-for-matlab-users.html"
    ]
   },
   {
@@ -360,7 +370,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.66075054,  0.99657254,  0.90953528])"
+       "array([ 0.88452189,  0.743751  ,  0.67150083])"
       ]
      },
      "execution_count": 14,
@@ -382,9 +392,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.83651001,  0.88711023,  0.49740362,  0.4723738 ],\n",
-       "       [ 0.49441128,  0.07664639,  0.7241821 ,  0.25910412],\n",
-       "       [ 0.21342068,  0.75326229,  0.73472945,  0.17126138]])"
+       "array([[ 0.16607954,  0.82464848,  0.51832928,  0.56797482],\n",
+       "       [ 0.36423298,  0.30763295,  0.90804496,  0.98225809],\n",
+       "       [ 0.11315311,  0.36398201,  0.91947533,  0.759239  ]])"
       ]
      },
      "execution_count": 15,
@@ -413,9 +423,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[13, 12, 14,  9],\n",
-       "       [12,  9,  9,  8],\n",
-       "       [ 9, 11,  7, 13]])"
+       "array([[10,  6, 18,  3],\n",
+       "       [ 5,  6,  9,  8],\n",
+       "       [ 5,  9, 10, 10]])"
       ]
      },
      "execution_count": 16,
@@ -444,16 +454,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 1.52913415,  0.64629883],\n",
-       "       [ 2.83998136,  0.99958445],\n",
-       "       [ 0.15515189,  1.08069642],\n",
-       "       [ 0.10878715,  0.48142973],\n",
-       "       [-0.08950776,  1.24710299],\n",
-       "       [-1.30995845,  0.21467694],\n",
-       "       [-0.81954869, -0.59353739],\n",
-       "       [-0.11265193, -0.35530796],\n",
-       "       [ 0.48231257,  0.04556363],\n",
-       "       [ 2.21814957,  1.88556166]])"
+       "array([[ 0.98831211,  0.20093651],\n",
+       "       [ 0.13718739,  0.04717609],\n",
+       "       [-1.46159446, -0.22605992],\n",
+       "       [ 0.4875862 , -1.54703699],\n",
+       "       [ 1.76865817,  1.80538568],\n",
+       "       [-0.48778403, -1.2793686 ],\n",
+       "       [ 1.45057686,  2.81011708],\n",
+       "       [ 0.82690694, -0.93197129],\n",
+       "       [ 0.59192186,  1.01667719],\n",
+       "       [ 0.6607188 , -0.70062132]])"
       ]
      },
      "execution_count": 17,
