--- a/python_format.ipynb
+++ b/python_format.ipynb
@@ -100,7 +100,7 @@
    "source": [
     "- '<' : Forces the field to be left-aligned within the available space (this is the default for most objects).\n",
     "- '>' : Forces the field to be right-aligned within the available space (this is the default for numbers).\n",
-    "- '=' : Forces the padding to be placed after the sign (if any) but before the digits. This is used for printing fields in the form \u2018+000000120\u2019. This alignment option is only valid for numeric types.\n",
+    "- '=' : Forces the padding to be placed after the sign (if any) but before the digits. This is used for printing fields in the form ‘+000000120’. This alignment option is only valid for numeric types.\n",
     "- '^' : Forces the field to be centered within the available space."
    ]
   },
@@ -347,6 +347,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Width + Precision"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following examples, 9 is the **total** space for the number (i.e. including dot and decimals) thus the following example has 4 characters for decimals, one character for the dot and 4 remaining characters for integers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\"{:9.4f}\".format(math.pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\"{:9.4f}\".format(12.123456789)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Type"
    ]
   },
@@ -516,8 +552,8 @@
    "metadata": {},
    "source": [
     "The available presentation types for floating point and decimal values are:\n",
-    "- 'e'  : Exponent notation. Prints the number in scientific notation using the letter \u2018e\u2019 to indicate the exponent. The default precision is 6.\n",
-    "- 'E'  : Exponent notation. Same as 'e' except it uses an upper case \u2018E\u2019 as the separator character.\n",
+    "- 'e'  : Exponent notation. Prints the number in scientific notation using the letter ‘e’ to indicate the exponent. The default precision is 6.\n",
+    "- 'E'  : Exponent notation. Same as 'e' except it uses an upper case ‘E’ as the separator character.\n",
     "- 'f'  : Fixed point. Displays the number as a fixed-point number. The default precision is 6.\n",
     "- 'F'  : Fixed point. Same as 'f'.\n",
     "- 'g'  : General format.\n",
@@ -635,8 +671,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -650,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
