Add some distributions and fix some bugs.

--- a/numpy_random.ipynb
+++ b/numpy_random.ipynb
@@ -65,6 +65,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Bernoulli distribution "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def bernoulli(p=None, size=1):\n",
+    "    return np.random.binomial(n=1, p=p, size=size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "bernoulli(p=0.5, size=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Binomial distribution"
    ]
   },
@@ -227,7 +257,7 @@
    },
    "outputs": [],
    "source": [
-    "data = np.random.poisson(lam=1, size=10000)\n",
+    "data = np.random.hypergeometric(ngood=15, nbad=15, nsample=15, size=10000)\n",
     "plot(data, bins=range(30))\n",
     "print(\"mean:\", data.mean())\n",
     "print(\"std:\", data.std())"
@@ -367,6 +397,171 @@
     "plot(data, bins=range(30))\n",
     "print(\"mean:\", data.mean())\n",
     "print(\"std:\", data.std())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Geometric distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bernoulli trials are experiments with one of two outcomes:\n",
+    "success or failure (an example of such an experiment is flipping\n",
+    "a coin).  The geometric distribution models the number of trials\n",
+    "that must be run in order to achieve success.  It is therefore\n",
+    "supported on the positive integers, $k = 1, 2, \\dots$\n",
+    "\n",
+    "The probability mass function of the geometric distribution is\n",
+    "\n",
+    "$$f(k) = (1 - p)^{k - 1} p$$\n",
+    "\n",
+    "where $p$ is the probability of success of an individual trial."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.random.geometric(p=0.5, size=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data = np.random.geometric(p=0.5, size=10000)\n",
+    "plot(data, bins=range(30))\n",
+    "print(\"mean:\", data.mean())\n",
+    "print(\"std:\", data.std())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pascal distribution (negative binomial distribution)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Samples are drawn from a negative binomial distribution with specified\n",
+    "parameters, $n$ trials and $p$ probability of success where $n$ is an\n",
+    "integer > 0 and $p$ is in the interval $[0, 1]$.\n",
+    "\n",
+    "The probability density for the negative binomial distribution is\n",
+    "\n",
+    "$$P(N;n,p) = \\binom{N+n-1}{n-1}p^{n}(1-p)^{N},$$\n",
+    "\n",
+    "where $n-1$ is the number of successes, $p$ is the\n",
+    "probability of success, and $N+n-1$ is the number of trials.\n",
+    "The negative binomial distribution gives the probability of $n-1$\n",
+    "successes and $N$ failures in $N+n-1$ trials, and success on the $(N+n)$th\n",
+    "trial.\n",
+    "\n",
+    "If one throws a die repeatedly until the third time a \"1\" appears,\n",
+    "then the probability distribution of the number of non-\"1\"s that\n",
+    "appear before the third \"1\" is a negative binomial distribution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.random.negative_binomial(n=1, p=0.1, size=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data = np.random.negative_binomial(n=1, p=0.1, size=10000)\n",
+    "plot(data, bins=range(30))\n",
+    "print(\"mean:\", data.mean())\n",
+    "print(\"std:\", data.std())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Uniform distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.random.choice(range(10), size=100, replace=True, p=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data = np.random.choice(range(25), size=100000, replace=True, p=None)\n",
+    "plot(data, bins=range(30))\n",
+    "print(\"mean:\", data.mean())\n",
+    "print(\"std:\", data.std())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Miscellaneous"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.random.choice(range(10), size=10, replace=False, p=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.random.choice([1, 2, 3], size=100, replace=True, p=[0.8, 0.1, 0.1])"
    ]
   },
   {
