Add examples for float numbers.

--- a/python_format.ipynb
+++ b/python_format.ipynb
@@ -100,7 +100,7 @@
    "source": [
     "- '<' : Forces the field to be left-aligned within the available space (this is the default for most objects).\n",
     "- '>' : Forces the field to be right-aligned within the available space (this is the default for numbers).\n",
-    "- '=' : Forces the padding to be placed after the sign (if any) but before the digits. This is used for printing fields in the form ‘+000000120’. This alignment option is only valid for numeric types.\n",
+    "- '=' : Forces the padding to be placed after the sign (if any) but before the digits. This is used for printing fields in the form \u2018+000000120\u2019. This alignment option is only valid for numeric types.\n",
     "- '^' : Forces the field to be centered within the available space."
    ]
   },
@@ -552,8 +552,8 @@
    "metadata": {},
    "source": [
     "The available presentation types for floating point and decimal values are:\n",
-    "- 'e'  : Exponent notation. Prints the number in scientific notation using the letter ‘e’ to indicate the exponent. The default precision is 6.\n",
-    "- 'E'  : Exponent notation. Same as 'e' except it uses an upper case ‘E’ as the separator character.\n",
+    "- 'e'  : Exponent notation. Prints the number in scientific notation using the letter \u2018e\u2019 to indicate the exponent. The default precision is 6.\n",
+    "- 'E'  : Exponent notation. Same as 'e' except it uses an upper case \u2018E\u2019 as the separator character.\n",
     "- 'f'  : Fixed point. Displays the number as a fixed-point number. The default precision is 6.\n",
     "- 'F'  : Fixed point. Same as 'f'.\n",
     "- 'g'  : General format.\n",
@@ -668,6 +668,102 @@
    "source": [
     "\"{:%}\".format(math.pi)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Comparison between {:f}, {:e} and {:g}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "numbers = [1000000, 100000, 10000, 1000, 100, 10, 1, 0.1, 0.01, 0.001, 0.0001, 0.00001]\n",
+    "for number in numbers:\n",
+    "    print(\"{:f}\".format(number), end=\"\\t\")\n",
+    "    print(\"{:e}\".format(number), end=\"\\t\")\n",
+    "    print(\"{:g}\".format(number))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Comparison between {:f}, {:e} and {:g} with a precision of 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "numbers = [1000, 100, 10, 1, 0.1, 0.01, 0.001, 0.0001, 0.00001]\n",
+    "for number in numbers:\n",
+    "    print(\"{:.2f}\".format(number), end=\"\\t\\t\")\n",
+    "    print(\"{:.2e}\".format(number), end=\"\\t\")\n",
+    "    print(\"{:.2g}\".format(number))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### More examples with {:g}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "numbers = [1000, 100, 10, 1, 0.1, 0.01, 0.001, 0.0001, 0.00001]\n",
+    "for number in numbers:\n",
+    "    print(\"{:g}\".format(number), end=\"\\t\")\n",
+    "    print(\"{:.3g}\".format(number), end=\"\\t\")\n",
+    "    print(\"{:.2g}\".format(number), end=\"\\t\")\n",
+    "    print(\"{:.1g}\".format(number), end=\"\\t\")\n",
+    "    print(\"{:.0g}\".format(number))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "numbers = [1234000, 123400, 12340, 1234, 123.4, 12.34, 1.234, 0.1234, 0.01234, 0.001234, 0.0001234, 0.00001234]\n",
+    "for number in numbers:\n",
+    "    print(\"{:<10g}\".format(number), end=\"\\t\")\n",
+    "    print(\"{:<10.6g}\".format(number), end=\"\\t\")\n",
+    "    print(\"{:<10.5g}\".format(number), end=\"\\t\")\n",
+    "    print(\"{:<10.4g}\".format(number), end=\"\\t\")\n",
+    "    print(\"{:<10.3g}\".format(number), end=\"\\t\")\n",
+    "    print(\"{:<10.2g}\".format(number), end=\"\\t\")\n",
+    "    print(\"{:<10.1g}\".format(number))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
