Remove useless lines.

--- a/matplotlib_hist_log_scale.ipynb
+++ b/matplotlib_hist_log_scale.ipynb
@@ -118,8 +118,7 @@
    },
    "outputs": [],
    "source": [
-    "plot(data,\n",
-    "     bins=np.arange(0, 2, 0.05))"
+    "plot(data)"
    ]
   },
   {
@@ -131,7 +130,6 @@
    "outputs": [],
    "source": [
     "plot(data,\n",
-    "     bins=np.arange(0, 2, 0.05),\n",
     "     logx=True)"
    ]
   },
@@ -144,7 +142,6 @@
    "outputs": [],
    "source": [
     "plot(data,\n",
-    "     bins=np.arange(0, 2, 0.05),\n",
     "     logy=True)"
    ]
   },
@@ -157,7 +154,6 @@
    "outputs": [],
    "source": [
     "plot(data,\n",
-    "     bins=np.arange(0, 2, 0.05),\n",
     "     logx=True,\n",
     "     logy=True)"
    ]
